@@ -136,6 +136,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 1962) Allow HTML attributes on <math>
 * (bug 10530) Introduce optional "sp-contributions-explain" message for
   additional explanation in Special:Contributions
+* (bug 10520) Preview licences during upload via AJAX (toggle with
+  $wgAjaxLicencePreview)
 
 == Bugfixes since 1.10 ==
 
